choose-mirror (2.17) UNRELEASED; urgency=low

  * Remove old unused NO_MIRROR define from mirrors.h.
  * Permit mirror/http/countries=manual and mirror/ftp/countries=manual as a
    more convenient spelling of "enter information manually".

 -- Colin Watson <cjwatson@debian.org>  Tue, 19 Jun 2007 14:38:25 +0100

choose-mirror (2.16) unstable; urgency=low

  [ Joey Hess ]
  * Use codename from /etc/default-release as the default release for the
    target system, which is set when D-I images are built. This replaces
    the current hardcoded value in mirrors.h which will be removed after a
    transition period. Closes: #426303.

  [ Updated translations ]
  * Esperanto (eo.po) by Serge Leblanc
  * Basque (eu.po) by Piarres Beobide
  * Japanese (ja.po) by Kenshi Muto
  * Romanian (ro.po) by Eddy Petrișor
  * Simplified Chinese (zh_CN.po) by Ming Hua

 -- Frans Pop <fjp@debian.org>  Mon, 28 May 2007 22:32:17 +0200

choose-mirror (2.15) unstable; urgency=low

  * Multiply menu-item-numbers by 100.

 -- Joey Hess <joeyh@debian.org>  Tue, 10 Apr 2007 14:37:42 -0400

choose-mirror (2.14) unstable; urgency=low

  [ Colin Watson ]
  * sort-countries: Add a small corner-case sanity check.

  [ Joey Hess ]
  * Switch PREFERRED_DISTRIBUTION to lenny.

  [ Updated translations ]
  * Norwegian Bokmål (nb.po) by Bjørn Steensrud
  * Tamil (ta.po) by Dr.T.Vasudevan

 -- Joey Hess <joeyh@debian.org>  Mon, 09 Apr 2007 16:01:41 -0400

choose-mirror (2.13) unstable; urgency=low

  [ Joey Hess ]
  * Add a warning message about missing archive-architecture fields in
    Mirrors.masterlist.
  * Generate valid templates that won't crash cdebconf when there are no
    mirrors for a given arch.

  [ Updated translations ]
  * Hebrew (he.po) by Lior Kaplan
  * Malayalam (ml.po) by Praveen A

 -- Frans Pop <fjp@debian.org>  Tue, 27 Feb 2007 17:38:13 +0100

choose-mirror (2.12) unstable; urgency=low

  [ Updated translations ]
  * Arabic (ar.po) by Ossama M. Khayat