@@ -3,6 +3,8 @@ choose-mirror (2.17) UNRELEASED; urgency=low
   * Remove old unused NO_MIRROR define from mirrors.h.
   * Permit mirror/http/countries=manual and mirror/ftp/countries=manual as a
     more convenient spelling of "enter information manually".
+  * If the proxy string does not already contain a colon, prepend http://
+    (closes: #257877).
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 19 Jun 2007 14:38:25 +0100
 
